--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #main {
   min-height: 100vh;
   display: flex;
@@ -6,7 +11,29 @@
   align-items: center;
 }
 
+#content {
+  min-width: 30vw;
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+}
+
 #messages {
-  height: 80%;
   border: solid 1px black;
+  width: 100%;
+  height: 50vh;
+  margin-bottom: 2rem;
+}
+
+#container input {
+  margin-right: 2rem;
+}
+
+#container button {
+  border: none;
+  background: ;
+  padding: 5px;
+  cursor: pointer;
 }
