--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,10 @@ ion-icon {
 }
 
 #content {
-  min-width: 30vw;
+  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #title {
@@ -26,9 +29,11 @@ ion-icon {
   color:white;
   width: 15vw;
   display: flex;
+  border-radius: 5px;
   justify-content: center;
   align-items: center;
   height: 10vh;
+  margin: 25px;
   
 }
 
@@ -52,11 +57,11 @@ ion-icon {
 
 #messages {
   border: solid 1px black;
-  width: 100%;
-  height: 50vh;
+  height: 59vh;
   margin-bottom: 2rem;
   overflow: auto;
   background: #f5f5f5;
+  width: 30vw;
 }
 
 .message_container {
@@ -71,9 +76,22 @@ ion-icon {
 .pseudo {
   text-decoration: underline;
   margin: 5px;
+  display: flex;
 }
 
 .message {
   padding: 5px;
   margin-left: 10px;
+}
+
+.imagePseudo{
+width: 20px;
+height: 20px;
+margin-right: 5px;
+}
+#parent{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
