--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ ion-icon {
 }
 
 #content {
-  
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -26,15 +26,14 @@ ion-icon {
   margin-bottom: 2rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #521d1d;
-  color:white;
-  width: 15vw;
+  color: white;
   display: flex;
   border-radius: 5px;
   justify-content: center;
   align-items: center;
   height: 10vh;
   margin: 25px;
-  
+  padding: 0.9rem;
 }
 
 #container {
@@ -56,7 +55,6 @@ ion-icon {
 }
 
 #messages {
-  border: solid 1px black;
   height: 59vh;
   margin-bottom: 2rem;
   overflow: auto;
@@ -66,11 +64,9 @@ ion-icon {
 
 .message_container {
   padding: 5px;
-}
-
-.message_container:nth-child(even) {
-  background: rgb(43, 13, 78);
-  color: #f5f5f5;
+  margin: 5px;
+  border-radius: 5px;
+  word-wrap: break-word;
 }
 
 .pseudo {
@@ -84,14 +80,13 @@ ion-icon {
   margin-left: 10px;
 }
 
-.imagePseudo{
-width: 20px;
-height: 20px;
-margin-right: 5px;
+.imagePseudo {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
-#parent{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+
+.smiley {
+  cursor: pointer;
+  font-size: 2rem;
 }
